--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,3 +2,4 @@
 
 * ttl support. Column now takes a ttl as a Duration
 * retries now defaults to 0. this is both less surprising and works around a bug in fingagle where retries >= maxConnectionsPerHost (with 1 host)
+* switch to builder pattern for Column
