--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+# 0.5.3
+* assorted fixes to build/publishing
+
+# 0.5.2
+* fix bug in remapping clusters
+
+# 0.5.1
+* replace dependency on util with util-core (robey)
+
 # 0.5.0
 * you can now set a connection timeout
 * support for counter column families
