--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+# 0.9.0
+* switch from Option[StatsReceiver] to NullStatsReceiver as an optional parameter
+* improvements to the cassie reducer
+
 # 0.8.0
 * upgrade to finagle 1.5.1
 
