--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
-# 0.13.1
-* SuperCounterColumnFamily was added, but only for legacy reasons. Don't use it for new projects.
+# 0.14.0
+* SuperCounterColumnFamily was added
+* regular super column families were also added
 
 # 0.13.0
 * upgrade to finagle 1.8.4
