--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 # 0.15.0
 * fix Utf8Codec. If you are using the current codec, you may need to use LegacyUtf8Codec for compatibility with your stored data.
+* fix getRowSlice for regular super column familes (ignored start/end column, order and size)
+* add multigetRowSlice for regular super column families
 
 # 0.14.0
 * SuperCounterColumnFamily was added
