--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+# 0.19.0
+* add a ServerSetsCluster constructor that accepts a ZooKeeperClient instance (matthew billoti)
+* upgrade to util 1.12.12 and finagle 1.10.0
+* support out-of-order operations on FakeCassandra
+* numerous cleanups in preparation for open-sourcing
+
 # 0.18.0
 * make FakeCassandra spin up on random port (@kmx)
 * Allow the column iteratee to take in order and limit. (@skr)
