--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+# 0.20.1
+* Use tcpConnectTimeout and connectTimeout for ClientBuilder. This will set the correct timeout for a TCP connection.
+
 # 0.20.0
 * added cassie-stress for doing micro-benchmarks
 * refactor to batch mutation builders to reduce garbage
