--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+# 0.23.0
+* Expose expFailFast on ClientBuilder
+
+[ missing logs ]
+
 # 0.20.1
 * Use tcpConnectTimeout and connectTimeout for ClientBuilder. This will set the correct timeout for a TCP connection.
 
